# reflow

./: .gitignore  CMakeLists.old  CMakeLists.txt  README.md  STM32F103C8Tx_FLASH.ld  cmake-format.py  gcc_defs.h  sources_list.cmake
Core/Inc/: FreeRTOSConfig.h  buildinfo.h  debug.h  globaldef.h  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
Core/Inc/app/: comm_task.h  control_task.h  kbd_task.h  regulator.h  startup.h  task_tokens.h  temperatur_task.h  ui_task.h
Core/Inc/bsp/: door_pwm.h  door_servo.h  exti.h  heat_cool.h  parameters_storage.h  temerature_measurement.h
Core/Inc/display/: display_pins.h  framebuffer.h  ssd1306.h  tvv_macros.h
Core/Inc/display/font8x8-master/: font8x8_basic.h
Core/Inc/helpers/: CAssert.h  crc32_helpers.h  ftoa.h  hex_gen.h  i2c_eeprom.h  messages.h  myCRT.h  my_comm.h  num_helpers.h  sys_cfg.h  sys_helpers.h  unused.h  watchdog.h
Core/Inc/menu/: menu.h
Core/Inc/profiles/: profiles.h
Core/Src/: adc.c  dma.c  freertos.c  gpio.c  i2c.c  main.c  spi.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  tim.c  usart.c
Core/Src/app/: comm_task.c  control_task.c  kbd_task.c  startup.c  temperatur_task.c  ui_task.c
Core/Src/bsp/: door_servo.C  exti.c  parameters_storage.c  temerature_measurement.c
Core/Src/display/: framebuffer.c  ssd1306.c
Core/Src/helpers/: crc32_helpers.c  ftoa.c  hex_gen.c  i2c_eeprom.c  messages.c  my_comm.c  num_helpers.c  sys_helpers.c  watchdog.c
Core/Src/menu/: menu.c
Core/Src/profiles/: profiles.c  regulator.c
Core386/Src/: main.c
Drivers/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_hal_def.h  stm32f1xx_hal_spi.h
cmake/modules/: BuildInfo.cmake  MCUSelector.cmake  StrictCompileFlags.cmake  linter.cmake
compiler/: arm-none-eabi-g++-defs.h  arm-none-eabi-g++-include  arm-none-eabi-gcc-defs.h  arm-none-eabi-gcc-include  compiler_defs.h  sources_list.cmake
scripts/: gen_info.py  gen_source_lists.py  get_builtins.sh
src/: CMakeLists.txt  FreeRTOSConfig.h  adc.c  adc.h  dma.c  freertos.c  freertos_exported.h  globaldef.h  gpio.c  main.c  main.h  sources_list.cmake  tim.c  usart.c  usart.h  wwdg.c
src/app/: comm_task.c  control_task.c  kbd_task.c  kbd_task.h  startup.c  startup.h  task_tokens.h  ui_task.c  ui_task.h
src/bsp/: door_pwm.h  door_servo.c  exti.c  parameters_storage.c  temerature_measurement.c  temerature_measurement.h
src/display/: framebuffer.c  framebuffer.h  ssd1306.h
src/helpers/: CAssert.h  FREERTOS-openocd.c  ascii_helpers.c  ascii_helpers.h  crc32_helpers.c  debug_sink.c  debug_sink.h  error_handler.c  error_handler.h  ftoa.c  ftoa.h  hex_gen.c  hex_gen.h  i2c_eeprom.c  i2c_eeprom.h  logging.c  logging.h  messages.c  messages.h  mutex_helpers.h  myCRT.c  myCRT.h  my_comm.c  my_comm.h  my_comm_cfg.h  num_helpers.c  num_helpers.h  rtc_helpers.c  rtc_helpers.h  stack_checker.c  stack_checker.h  sys_cfg.h  sys_helpers.c  sys_helpers.h  uni_vector.c  uni_vector.h  uni_vector_types.h  unused.h  watchdog.c  watchdog.h  (+2 more)
src/menu/: menu.c  menu.h
src/platform/freertos/: platform_reboot.h  platform_threading_defs.h  platform_time_util.c  platform_time_util.h
src/profiles/: profiles.c  profiles.h  regulator.c
targets/mcu/st/drivers/CMSIS/: sources_list.cmake
targets/mcu/st/drivers/STM32F1xx_HAL_Driver/: CMakeLists.txt  sources_list.cmake
targets/mcu/st/drivers/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_hal_spi.h
targets/mcu/st/stm32f103c8t6/: sources_list.cmake
targets/mcu/st/stm32f103c8t6/src/: hal_ll.h  stm32_assert.h  stm32f1xx_hal_conf.h  stm32f1xx_hal_msp.c  stm32f1xx_hal_timebase_tim.c  stm32f1xx_it.c
